More maven work for the openjdk6 issues